Revert "wip: generate storyshots"
This reverts commit 93ba3f434183302d4992ac411e88c0a1a34955c8.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,11 +14,7 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "allowSyntheticDefaultImports": true,
-    "noFallthroughCasesInSwitch": true,
-    "baseUrl": ".",
-    "paths": {
-      "components/*": ["components/*"]
-    }
+    "noFallthroughCasesInSwitch": true
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
