--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@storybook/addon-actions": "^6.2.9",
         "@storybook/addon-essentials": "^6.2.9",
         "@storybook/addon-links": "^6.2.9",
+        "@storybook/addon-storyshots": "^6.2.9",
         "@storybook/react": "^6.2.9",
         "@testing-library/dom": "^7.30.4",
         "@testing-library/jest-dom": "^5.12.0",
@@ -44,6 +45,7 @@
         "eslint-plugin-testing-library": "^4.1.2",
         "jest": "^26.6.3",
         "prettier": "^2.2.1",
+        "react-test-renderer": "^17.0.2",
         "typescript": "^4.2.4"
     }
 }
