--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "eslint-plugin-react-hooks": "^4.2.0",
         "eslint-plugin-testing-library": "^4.1.2",
         "jest": "^26.6.3",
+        "jest-css-modules": "^2.1.0",
         "prettier": "^2.2.1",
         "react-test-renderer": "^17.0.2",
         "typescript": "^4.2.4"
