--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@fontsource/lato": "^4.2.2",
         "@material-ui/core": "^4.11.4",
         "@material-ui/icons": "^4.11.2",
+        "clsx": "^1.1.1",
         "next": "^10.2.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2"
