--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "start": "next start",
         "storybook": "start-storybook -p 6006",
         "build-storybook": "build-storybook",
-        "test": "jest"
+        "test": "jest",
+        "lint": "eslint './**/*.{js,jsx,ts,tsx}'"
     },
     "dependencies": {
         "@fontsource/lato": "^4.2.2",
@@ -40,6 +41,7 @@
         "eslint": "^7.25.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-config-react-app": "^6.0.0",
+        "eslint-plugin-flowtype": "^5.7.2",
         "eslint-plugin-import": "^2.22.1",
         "eslint-plugin-jest": "^24.3.6",
         "eslint-plugin-jsx-a11y": "^6.4.1",
