--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
         "start": "next start",
         "storybook": "start-storybook -p 6006",
         "build-storybook": "build-storybook",
-        "test": "jest"
+        "test": "jest",
+        "lint": "eslint './**/*.{js,jsx,ts,tsx}'"
     },
     "dependencies": {
         "@fontsource/lato": "^4.2.2",
         "@material-ui/core": "^4.11.4",
         "@material-ui/icons": "^4.11.2",
+        "clsx": "^1.1.1",
         "next": "^10.2.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2"
@@ -39,6 +41,7 @@
         "eslint": "^7.25.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-config-react-app": "^6.0.0",
+        "eslint-plugin-flowtype": "^5.7.2",
         "eslint-plugin-import": "^2.22.1",
         "eslint-plugin-jest": "^24.3.6",
         "eslint-plugin-jsx-a11y": "^6.4.1",
