--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
         "clsx": "^1.1.1",
         "next": "^10.2.0",
         "react": "^17.0.2",
-        "react-dom": "^17.0.2"
+        "react-dom": "^17.0.2",
+        "react-fast-marquee": "^1.1.3"
     },
     "devDependencies": {
         "@babel/core": "^7.14.0",
