--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "next": "^10.2.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
-        "react-fast-marquee": "^1.1.3"
+        "react-fast-marquee": "^1.1.3",
+        "react-responsive-carousel": "^3.2.18"
     },
     "devDependencies": {
         "@babel/core": "^7.14.0",
