--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-fast-marquee": "^1.1.3",
+        "react-player": "^2.9.0",
         "react-responsive-carousel": "^3.2.18"
     },
     "devDependencies": {
