--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
         "@material-ui/core": "^4.11.4",
         "@material-ui/icons": "^4.11.2",
         "clsx": "^1.1.1",
+        "cors": "^2.8.5",
+        "cross-fetch": "^3.1.4",
         "next": "^10.2.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-fast-marquee": "^1.1.3",
         "react-player": "^2.9.0",
-        "react-responsive-carousel": "^3.2.18"
+        "react-responsive-carousel": "^3.2.18",
+        "rss-parser": "^3.12.0"
     },
     "devDependencies": {
         "@babel/core": "^7.14.0",
@@ -34,6 +37,7 @@
         "@testing-library/jest-dom": "^5.12.0",
         "@testing-library/react": "^11.2.6",
         "@testing-library/user-event": "^13.1.8",
+        "@types/cors": "^2.8.10",
         "@types/jest": "^26.0.23",
         "@types/react": "^17.0.4",
         "@typescript-eslint/eslint-plugin": "^4.22.0",
