--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
         "clsx": "^1.1.1",
         "cors": "^2.8.5",
         "cross-fetch": "^3.1.4",
+        "lodash": "^4.17.21",
         "next": "^10.2.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-fast-marquee": "^1.1.3",
+        "react-intersection-observer": "^8.32.0",
         "react-player": "^2.9.0",
         "react-responsive-carousel": "^3.2.18",
         "rss-parser": "^3.12.0"
@@ -39,6 +41,7 @@
         "@testing-library/user-event": "^13.1.8",
         "@types/cors": "^2.8.10",
         "@types/jest": "^26.0.23",
+        "@types/lodash": "^4.14.170",
         "@types/react": "^17.0.4",
         "@typescript-eslint/eslint-plugin": "^4.22.0",
         "@typescript-eslint/parser": "^4.22.0",
