--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
         "eslint-plugin-testing-library": "^4.1.2",
         "jest": "^26.6.3",
         "jest-css-modules": "^2.1.0",
+        "jest-fetch-mock": "^3.0.3",
         "prettier": "^2.2.1",
         "react-test-renderer": "^17.0.2",
         "typescript": "^4.2.4"
